deployment/openshift/wap-backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: callforcode
  name: callforcode-wap-backend-deployment
  labels:
    app: callforcode-wap-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: callforcode-wap-backend
  template:
    metadata:
      labels:
        app: callforcode-wap-backend
    spec:
      imagePullSecrets:
        - name: rivendell-image-pull-secret
      containers:
        - name: callforcode-wap-backend
          image: "rivendell.austinlab.test:5000/callforcode/callforcode-wap-backend:latest"
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
