deployment/openshift/wap-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: callforcode-endpoint-tls
    haproxy.router.openshift.io/rewrite-target: /
  name: callforcode-wap-frontend-route
  namespace: callforcode
  labels:
    app: callforcode-wap-frontend
spec:
  host: callforcode.apps.ocpvirt.austin.ourlab.cloud
  path: /wap
  to:
    kind: Service
    name: callforcode-wap-frontend-service
    weight: 100
  port:
    targetPort: 80
  tls:
    tls.crt: ""
    tls.key: ""
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
